Add Oauth to products routes
